--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "typescript": "^3.9.6",
     "webpack": "^5.0.0-beta.22",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1"
+    "webpack-dev-server": "^3.7.1",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "//note": "Don't remove js-xxhash despite it being unused, so it's included in the license disclaimer",
   "dependencies": {
@@ -25,12 +26,11 @@
     "js-xxhash": "^1.0.4",
     "regenerator-runtime": "^0.13.7",
     "svelte-routing": "^1.4.2",
-    "workbox-precaching": "^5.1.3",
-    "workbox-webpack-plugin": "^5.1.3"
+    "workbox-precaching": "^5.1.3"
   },
   "scripts": {
-    "build": "rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack",
-    "start": "rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack-dev-server -d --host 0.0.0.0",
+    "build": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack",
+    "start": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack-dev-server -d --host 0.0.0.0",
     "test": "cargo test && wasm-pack test --headless"
   },
   "browserslist": "> 0.25%, not dead"
