More testing in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ script:
   - cd taglogic
   - cargo build --verbose
   - cargo test --verbose
+  - cd ../web
+  - yarn
+  - yarn build
 
 after_success: |
   cd $TRAVIS_BUILD_DIR/taglogic
