Setup config.json on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - cargo install wasm-pack
 
 script:
+  - cp config.example.json config.json
   - cd taglogic
   - cargo build --verbose
   - cargo test --verbose
