NODE_ENV=production if building frontend in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ script:
   - cargo test --verbose
   - cd ../web
   - yarn
-  - yarn build
+  - NODE_ENV=production yarn build
 
 after_success: |
   cd $TRAVIS_BUILD_DIR/taglogic
