Test frontend in Travis CI (#16)
* More testing in Travis

* Specify nodejs version

* try using .nvmrc to specify node version

* Try just directly installing nodejs

* install wasm pack in travis

* remove deprecated config

* Setup config.json on Travis CI

* NODE_ENV=production if building frontend in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: rust
 
-sudo: required
-
 rust:
   - stable
   - beta
@@ -24,12 +22,17 @@ addons:
       - libiberty-dev
 
 install:
-  - true
+  - nvm install 10
+  - cargo install wasm-pack
 
 script:
+  - cp config.example.json config.json
   - cd taglogic
   - cargo build --verbose
   - cargo test --verbose
+  - cd ../web
+  - yarn
+  - NODE_ENV=production yarn build
 
 after_success: |
   cd $TRAVIS_BUILD_DIR/taglogic
