--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
     "mini-css-extract-plugin": "^0.6.0",
     "style-loader": "^0.23.1",
     "svelte": "^3.24.1",
-    "svelte-loader": "^2.13.6",
+    "svelte-loader": "smittyvb/svelte-loader#60e4bea6087c2accd60e51e26b5d7fcebeaca0f2",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "webpack": "^5.0.0-beta.29",
