--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,7 @@
     "webpack": "^5.0.0-beta.29",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
-    "workbox-webpack-plugin": "^5.1.4"
+    "worker-loader": "^3.0.2"
   },
   "//note": "Don't remove js-xxhash despite it being unused, so it's included in the license disclaimer",
   "dependencies": {
