--- a/web/package.json
+++ b/web/package.json
@@ -7,13 +7,12 @@
     "file-loader": "^6.1.0",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.4.1",
-    "mini-css-extract-plugin": "^0.11.2",
     "style-loader": "^0.23.1",
     "svelte": "^3.29.0",
     "svelte-loader": "smittyvb/svelte-loader#update-virtual-modules",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
-    "webpack": "^5.0.0-beta.29",
+    "webpack": "5.0.0-beta.29",
     "webpack-cli": "^3.3.3",
     "webpack-dev-server": "^3.7.1",
     "worker-loader": "^3.0.2"
