--- a/serv2/package.json
+++ b/serv2/package.json
@@ -5,6 +5,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "should-send-same-site-none": "^2.0.5",
     "web-push": "^3.4.4"
   }
