--- a/config.example.json
+++ b/config.example.json
@@ -6,5 +6,6 @@
     "vapid-public": "BGc8XZ0n_89iq74FvZEZlIiA8YwcgPQmcJycKbjq_pUXP-bQMWiAlnGb2tMzspm8zn7QlLCfFAbFjoTQ20nm-ns",
     "contact-email": "ttw@smitop.com",
     "extra-homepage-text": "This instance is run by <a href='https://smitop.com'>Smitop</a>.",
-    "extra-footer-text": "| <a href=\"/privacy.html\">Privacy policy</a> | <a href=\"mailto:ttw@smitop.com\">Contact: ttw@smitop.com</a>"
+    "extra-footer-text": "| <a href=\"/privacy.html\">Privacy policy</a> | <a href=\"mailto:ttw@smitop.com\">Contact: ttw@smitop.com</a>",
+    "secure-cookie": true
 }
