--- a/web/package.json
+++ b/web/package.json
@@ -30,8 +30,8 @@
     "workbox-webpack-plugin": "^5.1.4"
   },
   "scripts": {
-    "build": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && sed \"s/APPNAME/$(node -e \"console.log(require('../config.json')['app-name'])\")/g\" static/manifest.webmanifest.template > static/manifest.webmanifest && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack",
-    "start": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && sed \"s/APPNAME/$(node -e \"console.log(require('../config.json')['app-name'])\")/g\" static/manifest.webmanifest.template > static/manifest.webmanifest && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack serve --host 0.0.0.0",
+    "build": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && sed \"s/APPNAME/$(node -e \"console.log(require('../config.json')['app-name'] || 'TagTime Web')\")/g\" static/manifest.webmanifest.template > static/manifest.webmanifest && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack",
+    "start": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && sed \"s/APPNAME/$(node -e \"console.log(require('../config.json')['app-name'] || 'TagTime Web')\")/g\" static/manifest.webmanifest.template > static/manifest.webmanifest && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack serve --host 0.0.0.0",
     "test": "cargo test && wasm-pack test --headless"
   },
   "browserslist": "> 0.25%, not dead"
