--- a/web/package.json
+++ b/web/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "build": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && sed \"s/APPNAME/$(node -e \"console.log(require('../config.json')['app-name'] || 'TagTime Web')\")/g\" static/manifest.webmanifest.template > static/manifest.webmanifest && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack",
     "start": "yarn licenses generate-disclaimer --silent --prod > static/disclaimer.txt && sed \"s/APPNAME/$(node -e \"console.log(require('../config.json')['app-name'] || 'TagTime Web')\")/g\" static/manifest.webmanifest.template > static/manifest.webmanifest && rm -rf dist pkg && wasm-pack build ../taglogic/ --out-dir ../web/pkg && webpack serve --host 0.0.0.0",
-    "test": "cargo test && wasm-pack test --headless"
+    "test": "cargo test && wasm-pack test --headless",
+    "bundlesize": "NODE_ENV=production ./node_modules/.bin/webpack --json > stats.json && webpack-bundle-analyzer stats.json"
   },
   "browserslist": "> 0.25%, not dead"
 }
