--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+      - run: cd web
       - name: Install node dependencies
         run: yarn
       - name: Build
