fix directory names

--- a/.github/workflows/taglogic-test.yml
+++ b/.github/workflows/taglogic-test.yml
@@ -27,5 +27,6 @@ jobs:
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
+        working-directory: taglogic
         with:
           command: test
