--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -16,6 +16,18 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Install wasm-pack
+        # fork that supports working-directory
+        uses: actions-rs/cargo
+        working-directory: taglogic
+        with:
+          command: install wasm-pack
       - run: cp config.example.json config.json
       - name: Install node dependencies
         run: yarn
