--- a/.github/workflows/taglogic.yml
+++ b/.github/workflows/taglogic.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run cargo test
         # fork that supports working-directory
-        uses: marcopolo/cargo#a527bf4d534717ff4424a84446c5d710f8833139
+        uses: marcopolo/cargo
         working-directory: taglogic
         with:
           command: test
@@ -48,7 +48,7 @@ jobs:
           components: rustfmt
 
       - name: Run cargo fmt
-        uses: marcopolo/cargo#a527bf4d534717ff4424a84446c5d710f8833139
+        uses: marcopolo/cargo
         working-directory: taglogic
         with:
           command: fmt
