--- a/.github/workflows/taglogic.yml
+++ b/.github/workflows/taglogic.yml
@@ -27,10 +27,10 @@ jobs:
 
       - name: Run cargo test
         # fork that supports working-directory
-        uses: marcopolo/cargo
-        working-directory: taglogic
+        uses: marcopolo/cargo@a527bf4d534717ff4424a84446c5d710f8833139
         with:
           command: test
+          working-directory: taglogic
 
   formatted:
     name: Formatted with rustfmt
@@ -48,7 +48,7 @@ jobs:
           components: rustfmt
 
       - name: Run cargo fmt
-        uses: marcopolo/cargo
+        uses: marcopolo/cargo@a527bf4d534717ff4424a84446c5d710f8833139
         working-directory: taglogic
         with:
           command: fmt
