--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -24,7 +24,7 @@ jobs:
           override: true
       - name: Install wasm-pack
         # fork that supports working-directory
-        uses: actions-rs/cargo
+        uses: actions-rs/cargo@v1
         with:
           command: install wasm-pack
       - run: cp config.example.json config.json
