--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     "html-webpack-plugin": "^4.5.1",
     "style-loader": "^0.23.1",
     "svelte": "^3.31.2",
-    "svelte-loader": "smittyvb/svelte-loader#update-virtual-modules",
+    "svelte-loader": "non25/svelte-loader#wvm-as-dep",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5",
@@ -23,6 +23,7 @@
     "flatpickr": "^4.6.9",
     "humanize-duration": "^3.23.1",
     "js-xxhash": "^1.0.4",
+    "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.29.1",
     "svelte-routing": "^1.5.0",
     "workbox-precaching": "^6.0.2",
