--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
     "html-webpack-plugin": "^4.5.1",
     "style-loader": "^0.23.1",
     "svelte": "^3.31.2",
-    "svelte-loader": "non25/svelte-loader#wvm-as-dep",
+    "svelte-loader": "^3.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5",
