--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.1",
-    "html-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^5.0.0-beta.6",
     "style-loader": "^0.23.1",
     "svelte": "^3.31.2",
     "svelte-loader": "^3.0.0",
