Test with minimal versions in GH Action

--- a/.github/workflows/taglogic.yml
+++ b/.github/workflows/taglogic.yml
@@ -53,3 +53,33 @@ jobs:
           working-directory: taglogic
           command: fmt
           args: --all -- --check
+  min-vers:
+    name: works with minimal dependency versions
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Checkout sources
+      uses: actions/checkout@v2
+
+    - name: Install toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: nightly
+        override: true
+    - run: cd taglogic
+
+    - name: Set versions to minimal
+      # fork that supports working-directory
+      uses: marcopolo/cargo@a527bf4d534717ff4424a84446c5d710f8833139
+      with:
+        command: update
+        working-directory: taglogic
+        args: -Z minimal-versions
+
+    - name: Run cargo test
+      # fork that supports working-directory
+      uses: marcopolo/cargo@a527bf4d534717ff4424a84446c5d710f8833139
+      with:
+        command: test
+        working-directory: taglogic
+
