run server in right working dir

--- a/.github/workflows/serv2.yml
+++ b/.github/workflows/serv2.yml
@@ -37,3 +37,4 @@ jobs:
         working-directory: serv2
       - name: Try running
         run: SERV2_TEST_MODE=1 ./run.sh
+        working-directory: serv2
