make step numbers look right in dark mode

--- a/web/static/index.html.template
+++ b/web/static/index.html.template
@@ -107,6 +107,9 @@
                 background: black;
                 color: white;
             }
+            .step-num {
+                color: black;
+            }
             a {
                 color: #8a8aff;
             }
