prevent back button trapping on /app redirect

--- a/web/static/index.html.template
+++ b/web/static/index.html.template
@@ -166,7 +166,8 @@
     <script>
         // @license magnet:?xt=urn:btih:8e4f440f4c65981c5bf93c76d35135ba5064d8b7&dn=apache-2.0.txt Apache-2.0
         if (localStorage["retag-auth"] && localStorage["retag-auth"] !== "out") {
-            location.pathname = "/app";
+            // don't create a history entry for this page to prevent back button trapping
+            location.replace("/app");
         }
         var supported = typeof window.WebAssembly !== "undefined";
         if (!supported) {
