Fix homepage card color in dark mode

--- a/web/static/index.html.template
+++ b/web/static/index.html.template
@@ -139,6 +139,9 @@
             a:visited {
                 color: #C07FFF;
             }
+            .card {
+                color: black;
+            }
         }
 
         .app-root {
