--- a/web/static/index.html.template
+++ b/web/static/index.html.template
@@ -296,7 +296,7 @@
                 <footer>
                     <p>
                         APPNAME was made by <a href="https://smitop.com/">Smitop</a> (<a
-                            href="mailto:ttw@smitop.com">ttw@smitop.com</a>).
+                            href="mailto:ttw@smitop.com">ttw@smitop.com</a>). See <a href="https://github.com/smittyvb/ttw">the repo on Github</a>.
                     </p>
                 </footer>
             </div>
