--- a/web/static/manifest.webmanifest.template
+++ b/web/static/manifest.webmanifest.template
@@ -7,8 +7,8 @@
     "lang": "en",
     "start_url": "/app",
     "display": "standalone",
-    "theme_color": "rgb(245, 214, 112)",
-    "background_color": "rgb(138, 121, 0)",
+    "theme_color": "#005644",
+    "background_color": "#c7f1ea",
     "shortcuts": [
         {
             "name": "Dashboard",
