Say pings instead of tags

--- a/web/static/index.html.template
+++ b/web/static/index.html.template
@@ -283,7 +283,7 @@
                 </div>
 
                 <p>
-                    Once you've responded to enough tags, many types of graphs can be generated
+                    Once you've responded to enough pings, many types of graphs can be generated
                     from your data:
                 </p>
 
