--- a/web/static/index.html.template
+++ b/web/static/index.html.template
@@ -214,7 +214,7 @@
     <div class="app-root">
         <div>
             <div id="unsupported">
-                Your browser doesn't support APPNAME, so logging in won't work.
+                Your browser doesn&rsquo;t support APPNAME, so logging in won&rsquo;t work.
             </div>
             <div class="home">
                 <header>
@@ -302,7 +302,7 @@
                 <p>
                     <a href="https://github.com/tagtime/TagTime" target="_blank" rel="noopener">TagTime</a>
                     was initially written in Perl. APPNAME is a complete, modern, re-implementation
-                    that works in web browsers. This isn't the only re-implementation though: check
+                    that works in web browsers. This isn&rsquo;t the only re-implementation though: check
                     out <a href="http://doc.beeminder.com/tagtime" target="_blank" rel="noopener">this comprehensive
                         list</a>
                     for more.
