--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,10 +7,20 @@ updates:
     directory: "/web"
     schedule:
       interval: "daily"
+    ignore:
+      - dependency-name: "*"
+        update-types:
+          - version-update:semver-minor
+          - version-update:semver-patch
   - package-ecosystem: "npm"
     directory: "/serv2"
     schedule:
       interval: "daily"
+    ignore:
+      - dependency-name: "*"
+        update-types:
+          - version-update:semver-minor
+          - version-update:semver-patch
   - package-ecosystem: "cargo"
     directory: "/taglogic"
     schedule:
