--- a/taglogic/Cargo.toml
+++ b/taglogic/Cargo.toml
@@ -3,6 +3,7 @@ name = "taglogic"
 version = "0.1.0"
 authors = ["Smitty"]
 edition = "2018"
+license = "Apache-2.0"
 
 [dependencies]
 lazy_static = "1.4.0"
